--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,16 @@
 .App-link {
   color: #61dafb;
 }
-
+.error {
+  color: #ff0000;
+  font-size: 0.8em;
+}
+.hidden {
+  display: none;
+}
+.error.show {
+  display: block;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
