--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,13 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1.5rem;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  margin-bottom: 25px;
 }
 .error {
   color: #ff0000;
