--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   justify-content: center;
   font-size: 1.5rem;
   color: white;
+}
+.color-gradient-bar {
+  height: 5px;
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left, orange , yellow, green, cyan, blue, violet); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, orange, yellow, green, cyan, blue, violet); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, orange, yellow, green, cyan, blue, violet); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, orange , yellow, green, cyan, blue, violet); /* Standard syntax (must be last) */
   margin-bottom: 25px;
 }
 .error {
